# Simulation

./: .gitignore  Dockerfile  README.md  readme.md  sim.sh  start.sh
files/ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
files/ros/log/: latest_build
files/ros/src/car_brain/: IMPLEMENTATION_DETAILS.md  LANE_DETECTION_ENHANCEMENTS.md  PID_TUNING_GUIDE.md  README_LANE_DETECTION.md  VERIFICATION_CHECKLIST.md  package.xml  setup.cfg  setup.py
files/ros/src/my_robot_controller/: setup.py
files/ros/src/traffic_light_plugin/: CMakeLists.txt  package.xml
files/ros/src/traffic_light_plugin/src/: .TrafficLightPlugin.cpp.swp  TrafficLightPlugin.cpp
files/simulation/: world.sdf
files/simulation/models_pkg/cam_birdeye_REC/: model.config  model.sdf
files/simulation/models_pkg/camera/: model.config  model.sdf
files/simulation/models_pkg/camera_follow/: model.config  model.sdf
files/simulation/models_pkg/car_body/: model.config  model.sdf
files/simulation/models_pkg/chassis/: model.config  model.sdf
files/simulation/models_pkg/crosswalk_sign/: model.config  model.sdf
files/simulation/models_pkg/enter_highway_sign/: model.config  model.sdf
files/simulation/models_pkg/leave_highway_sign/: model.config  model.sdf
files/simulation/models_pkg/oneway_sign/: model.config  model.sdf
files/simulation/models_pkg/p_alpha_d/: model.config  model.sdf
files/simulation/models_pkg/p_alpha_s/: model.config  model.sdf
files/simulation/models_pkg/p_beta_d/: model.config  model.sdf
files/simulation/models_pkg/p_beta_s/: model.config  model.sdf
(+85 files in other folders)
